# trial

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  readme.md
cmake/: aarch64_linux.cmake  project.cmake
languages/c/: CMakeLists.txt  alignment.c  sizeof.c  zero_length_array.c
languages/cpp/: CMakeLists.txt  dynamic_cast.cpp  friendly.cpp  function_hiding.cpp  function_overloading.cpp  function_overriding.cpp  static.cpp  value_reference.cpp
languages/python/: 2array.py
system/: CMakeLists.txt
system/linux/: CMakeLists.txt  fifo.cpp  msg.cpp  pipe.cpp  sendmmsg.cpp  sendmsg.cpp  thread_affinity.cpp
system/posix/: CMakeLists.txt  fork.cpp  spawn.cpp
system/unix/: CMakeLists.txt  mmap.cpp
system/windows/: CMakeLists.txt
